--- a/app/views/autoevaluations/new.html.erb
+++ b/app/views/autoevaluations/new.html.erb
@@ -118,7 +118,7 @@
                             <div class="col-8 text-center e-b-r" style="padding: 12px;">
                                 <strong><%= ability.ability %></strong>
                             </div>
-                            <input class="col-4" type="number" min="1" max="5" style="padding: 13px" name="abilities[<%=ability.id%>][value]"/>
+                            <input required class="col-4" type="number" min="1" max="5" style="padding: 13px" name="abilities[<%=ability.id%>][value]"/>
                         </div>
                     <% end %>
                 <% end %>
