--- a/app/views/periods/report.html.erb
+++ b/app/views/periods/report.html.erb
@@ -54,6 +54,7 @@
                     </div>
                 </div>
 
+                <% contador = 0 %>
                 <% @collaborator.profile.profile_abilities.each_with_index do |entry, index| %>
                     <% if entry.ability.abilities_type_id != 1 %>
                         <div class="row">
@@ -67,17 +68,18 @@
                                 <% if @autoevaluation.nil? %>
                                     -
                                 <% else %>
-                                    <%= @autoevaluation.evaluation_abilities[index].value %>
+                                    <%= @autoevaluation.evaluation_abilities[contador].value %>
                                 <% end %>
                             </div>
                             <div class="col-2 e-b-b e-b-l text-center vertical-center">
                                 <% if @evaluation.nil? %>
                                     -
                                 <% else %>
-                                    <%= @evaluation.evaluation_abilities[index].value %>
+                                    <%= @evaluation.evaluation_abilities[contador].value %>
                                 <% end %>
                             </div>
                         </div>
+                        <% contador += 1 %>
                     <% end %>
                 <% end %>
 
