--- a/app/views/periods/edit.html.erb
+++ b/app/views/periods/edit.html.erb
@@ -65,10 +65,32 @@
         }
     }
 
-    removeOption = function(element, select_id) {
-        console.log("entro a removeOption")
-        $(`#${select_id} option[value="${element}"]`).remove();
-        $(`#${select_id}`).bootstrapDualListbox("refresh")
+    removeOption = function(element) {
+        const ids = $("#evaluators_select").val()
+        if (indexes_evaluators.length !== 0) {
+            let index = null
+            let step_index = 0
+            inner_loop:
+            for (let i = 0; i < indexes_evaluators.length; ++i) {
+                if (gon.collaborators[indexes_evaluators[i]].id === element) {
+                    index = indexes_evaluators[i]
+                    step_index = evaluators.indexOf(gon.collaborators[index].id)
+                    break inner_loop
+                }
+            }
+            if (index !== null) {
+                indexes_evaluators = indexes_evaluators.filter((e) => e !== index)
+                evaluators = evaluators.filter((e) => e !== evaluators[step_index])
+                select_fields = select_fields.filter((e) => e !== select_fields[step_index + 1])
+                $("#wizard").steps("remove",  step_index + 2)
+            }
+
+        }
+
+        for(let select_field of select_fields) {
+            $(`#${select_field[0].id} option[value="${element}"]`).remove();
+            $(`#${select_field[0].id}`).bootstrapDualListbox("refresh")
+        }
     }
 
     $(function() {
@@ -191,7 +213,7 @@
                             break inner_loop
                         }
                     }
-                    removeOption(gon.collaborators[index].id, "evaluators_select")
+                    removeOption(gon.collaborators[index].id)
                     indexes_collaborators = indexes_collaborators.filter((e) => e !== index)
                 }
             }
@@ -217,14 +239,13 @@
                         title: `Evaluador: ${current_collaborator.name} ${current_collaborator.last_name}`,
                         content: `
                         <div class="step-content">
-                            <select name="evaluates[${current_collaborator.id}][]" class="form-control evaluates${current_collaborator.id}_select" multiple>
+                            <select id="evaluates_${current_collaborator.id}_select" name="evaluates[${current_collaborator.id}][]" class="form-control evaluates${current_collaborator.id}_select" multiple>
 
                             </select>
                         </div>
                         `
                     })
                     const current_option = $(`.evaluates${current_collaborator.id}_select`)
-                    select_fields.push(current_option)
                     for (let index of indexes_collaborators) {
                         if (gon.collaborators[index].id !== current_collaborator.id)
                             $(current_option).append($('<option>', {
@@ -246,6 +267,8 @@
                     current_collaborators_select_container.find('.removeall i').removeClass().addClass('fa fa-arrow-left');
                     current_collaborators_select_container.find('.move i').removeClass().addClass('fa fa-arrow-right');
                     current_collaborators_select_container.find('.remove i').removeClass().addClass('fa fa-arrow-left');
+
+                    select_fields.push(current_option)
                 }
             }
             else {
@@ -254,17 +277,22 @@
                     let step_index = 0
                     inner_loop:
                     for (let i = 0; i < indexes_evaluators.length; ++i) {
-                        if (!ids.includes(gon.collaborators[i].id.toString())) {
+                        if (!ids.includes(gon.collaborators[indexes_evaluators[i]].id.toString())) {
                             index = indexes_evaluators[i]
                             step_index = evaluators.indexOf(gon.collaborators[index].id)
                             break inner_loop
                         }
                     }
-                    indexes_evaluators = indexes_evaluators.filter((e) => e !== index)
-                    evaluators = evaluators.filter((e) => e !== evaluators[step_index])
-                    $("#wizard").steps("remove",  step_index + 2)
+                    if (index !== null) {
+                        indexes_evaluators = indexes_evaluators.filter((e) => e !== index)
+                        evaluators = evaluators.filter((e) => e !== evaluators[step_index])
+                        select_fields = select_fields.filter((e) => e[0].id !== `evaluates_${gon.collaborators[index].id}_select`)
+                        $("#wizard").steps("remove",  step_index + 2)
+                    }
                 }
             }
+            console.log(select_fields)
+            console.log(indexes_evaluators)
         })
     })
 </script>
