fix: js.map not found

--- a/app/views/periods/new.html.erb
+++ b/app/views/periods/new.html.erb
@@ -17,7 +17,7 @@
 <div class="ibox-content m-b-sm border-bottom">
 <%= form_tag "/periods", :method => "post", :id => "new_period", :autocomplete => "off"%>
     <div class="form-group">
-        <label>Inicio y término del periodo</label>
+        <label>Inicio y término del período</label>
         <div class="input-daterange input-group" id="datepicker">
             <input required type="text" class="form-control-sm form-control" name="start"/>
             <span class="input-group-addon input-group-addon">Hasta</span>
