--- a/app/views/periods/edit.html.erb
+++ b/app/views/periods/edit.html.erb
@@ -17,11 +17,11 @@
 <div class="ibox-content m-b-sm border-bottom">
 <%= form_tag "/periods/#{params[:id]}", :method => "put", :id => "new_period", :autocomplete => "off"%>
     <div class="form-group">
-        <label>Inicio y término del periodo</label>
+        <label>Inicio y término del período</label>
         <div class="input-daterange input-group" id="datepicker">
-            <input required type="text" class="form-control-sm form-control" name="start"/>
+            <input required type="text" class="form-control-sm form-control" name="start" value="<%= @start %>"/>
             <span class="input-group-addon input-group-addon">Hasta</span>
-            <input required type="text" class="form-control-sm form-control" name="end"/>
+            <input required type="text" class="form-control-sm form-control" name="end" value="<%= @end %>"/>
         </div>
     </div>
     <div class="hr-line-dashed"></div>
