--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -99,8 +99,22 @@
 
 <script type="text/javascript">
 
+selectFilter = function(element, selects) {
+    for (let select of selects)
+        if (element.id !== select.id) {
+            if (select.value === element.value) {
+                select.parentElement.parentElement.parentElement.remove()
+            }
+            else {
+                $(`#${select.id} option[value="${aux.value}"]`).remove()
+            }
+        }
+}
 
 $(function() {
+
+    let select_blandas = [],
+        select_tecnicas = []
 
     $("#edit_profile_<%= @profile.id %>").validate({
         rules: {
@@ -145,17 +159,22 @@ $(function() {
         $(button).on("click", (e) => {
             e.target.parentElement.parentElement.parentElement.remove()
         })
-        // valor_esperado = insertedItem[0].lastChild.previousSibling.firstChild.nextSibling.firstChild.nextSibling.nextSibling.nextSibling
-        // $(valor_esperado).TouchSpin({
-        //     min: 0,
-        //     max: 7,
-        //     step: 1,
-        //     verticalbuttons: true,
-        //     buttondown_class: 'btn btn-white',
-        //     buttonup_class: 'btn btn-white',
-        //     verticalupclass: 'fa fa-sort-asc',
-        //     verticaldownclass: 'fa fa-sort-desc'
-        // });
+
+        $(ability_select).on("select2:select", e => selectFilter({
+            id: e.target.id,
+            value: e.target.value
+        }, select_tecnicas))
+
+
+        if (gon.tecnicas.length === select_tecnicas.length)
+            console.log('No quedan mas abilitdades')
+        else
+            for (let aux of select_tecnicas)
+                $(`#${ability_select.id} option[value="${aux.value}"]`).remove()
+
+        select_tecnicas.push(ability_select)
+        $(ability_select).trigger("change")
+        $(ability_select).select2('open')
     })
 
     $('#add-blandas-association').on('cocoon:after-insert', (e, insertedItem) => {
@@ -174,17 +193,61 @@ $(function() {
         $(button).on("click", (e) => {
             e.target.parentElement.parentElement.parentElement.remove()
         })
-        // $(valor_esperado).TouchSpin({
-        //     min: 0,
-        //     max: 7,
-        //     step: 1,
-        //     verticalbuttons: true,
-        //     buttondown_class: 'btn btn-white',
-        //     buttonup_class: 'btn btn-white',
-        //     verticalupclass: 'fa fa-sort-asc',
-        //     verticaldownclass: 'fa fa-sort-desc'
-        // });
+
+        $(ability_select).on("select2:select", e => selectFilter({
+            id: e.target.id,
+            value: e.target.value
+        }, select_blandas))
+
+        if (gon.blandas.length === select_blandas.length)
+            console.log('No quedan mas abilitdades')
+        else
+            for (let aux of select_blandas) 
+                $(`#${ability_select.id} option[value="${aux.value}"]`).remove()
+
+        select_blandas.push(ability_select)
+        $(ability_select).trigger("change")
+        $(ability_select).select2('open')
     })
+
+    // init first blandas select
+    const fisrt_blanda_select = $("#fisrt_blanda_select")
+
+    select_blandas.push(fisrt_blanda_select[0])
+
+    $(fisrt_blanda_select).select2({
+        placeholder: "Seleccione la Competencia",
+        language: {
+            noResults: function (params) {
+            return "No hay coincidencias";
+            }
+        }
+    })
+
+    $(fisrt_blanda_select).on("select2:select", e => selectFilter({
+        id: e.target.id,
+        value: e.target.value
+    }, select_blandas))
+
+
+    // init first blandas select
+    const fisrt_tecnica_select = $("#fisrt_tecnica_select")
+
+    select_tecnicas.push(fisrt_tecnica_select[0])
+
+    $(fisrt_tecnica_select).select2({
+        placeholder: "Seleccione la Competencia",
+        language: {
+            noResults: function (params) {
+            return "No hay coincidencias";
+            }
+        }
+    })
+
+    $(fisrt_tecnica_select).on("select2:select", e => selectFilter({
+        id: e.target.id,
+        value: e.target.value
+    }, select_tecnicas))
 
     $("#fisrt_blanda_select").select2({
         placeholder: "Seleccione la Competencia",
