--- a/app/views/periods/index.html.erb
+++ b/app/views/periods/index.html.erb
@@ -10,6 +10,31 @@
 </div>
 
 <div class="wrapper wrapper-content animated fadeInRight">
+
+<%= form_tag periods_path, :method => 'get' do %>
+<div class="ibox-content m-b-sm border-bottom">
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="form-group">
+                <label class="col-form-label" for="nombre">Año</label>
+                <%= text_field_tag :year, params[:year], {
+                    :class => "form-control",
+                    :placeholder => "Año",
+                    :type => "number"
+                } %>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-1 offset-lg-11">
+            <%= button_tag :submit, {:class => "btn btn-primary"} do %>
+                <i class="fa fa-search"></i>&nbsp;Buscar
+            <% end %>
+        </div>
+    </div>
+</div>
+<% end %>
+
 <div class="ibox-content m-b-sm border-bottom">
     <div class="row">
         <div class="col-lg-12">
