--- a/app/views/periods/report.html.erb
+++ b/app/views/periods/report.html.erb
@@ -56,7 +56,7 @@
 
                 <% contador = 0 %>
                 <% @collaborator.profile.profile_abilities.each_with_index do |entry, index| %>
-                    <% if entry.ability.abilities_type_id != 1 %>
+                    <% if entry.ability.abilities_type_id == 2 %>
                         <div class="row">
                             <div class="col-6 e-b-b vertical-center">
                                 <%= entry.ability.ability %>
@@ -68,14 +68,14 @@
                                 <% if @autoevaluation.nil? %>
                                     -
                                 <% else %>
-                                    <%= @autoevaluation.evaluation_abilities[contador].value %>
+                                    <%= find_value(entry.ability.id, @autoevaluation) %>
                                 <% end %>
                             </div>
                             <div class="col-2 e-b-b e-b-l text-center vertical-center">
                                 <% if @evaluation.nil? %>
                                     -
                                 <% else %>
-                                    <%= @evaluation.evaluation_abilities[contador].value %>
+                                    <%= find_value(entry.ability.id, @evaluation) %>
                                 <% end %>
                             </div>
                         </div>
@@ -110,7 +110,7 @@
                 </div>
 
                 <% @collaborator.profile.profile_abilities.each_with_index do |entry, index| %>
-                    <% if entry.ability.abilities_type_id != 2 %>
+                    <% if entry.ability.abilities_type_id == 1 %>
                         <div class="row">
                             <div class="col-6 e-b-b vertical-center">
                                 <%= entry.ability.ability %>
@@ -122,14 +122,14 @@
                                 <% if @autoevaluation.nil? %>
                                     -
                                 <% else %>
-                                    <%= @autoevaluation.evaluation_abilities[index].value %>
+                                    <%= find_value(entry.ability.id, @autoevaluation) %>
                                 <% end %>
                             </div>
                             <div class="col-2 e-b-b e-b-l text-center vertical-center">
                                 <% if @evaluation.nil? %>
                                     -
                                 <% else %>
-                                    <%= @evaluation.evaluation_abilities[index].value %>
+                                    <%= find_value(entry.ability.id, @evaluation) %>
                                 <% end %>
                             </div>
                         </div>
