--- a/app/views/collaborators/edit.html.erb
+++ b/app/views/collaborators/edit.html.erb
@@ -55,8 +55,8 @@
                     <div class="hr-line-dashed"></div>
                     <div class="form-group row">
                         <div class="form-group col-md-6 col-sm-12">
-                            <%= f.label "Perfil Professional" %>
-                            <%= select_tag "user[profile_id]", options_for_select(@profiles.map {|profile| [profile.profile, profile.id]}), {:class => "form-control", :value => @collaborator.collaborator.profile.id, id: "user_profile_id", include_blank: true} %>
+                            <%= f.label "Perfil Profesional" %>
+                            <%= select_tag "user[profile_id]", options_for_select(@profiles.map {|profile| [profile.profile, profile.id]}), {:class => "form-control", :value => @collaborator.collaborator.profile.id, id: "user_profile_id", :disabled => active_period?} %>
                         </div>
                         <div class="form-group col-md-6 col-sm-12">
                             <%= f.label "Estado" %>
