--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -76,7 +76,7 @@
                             <div class="btn-group">
                                 <button class="btn-white btn btn-xs" style="border-radius: 0px;"><%= link_to "Ver", profile_path(profile) %></button>
                                 <%= link_to "/profiles/#{profile.id}/edit", :controller => "profiles", :action => "edit", :method => "get" do %>
-                                    <button class="btn-warning btn btn-xs" style="border-radius: 0px;">Editar</button>
+                                    <button <%= active_period? ? "disabled" : "" %> class="btn-warning btn btn-xs" style="border-radius: 0px;">Editar</button>
                                 <% end %>
                                 <%= link_to "/profiles/#{profile.id}", :controller => "profiles", :action => "destroy", :method => "delete" do %>
                                     <button class="btn-danger btn btn-xs" style="border-radius: 0px;">Borrar</button>
